# kioptipack-blueprints

./: .readthedocs.yaml  .useful-commands  README.md  requirements_docs.txt
fast-iot-example-projects/fiot-data-processing-pipeline/: MANIFEST.in  README.md  configure.py  pyproject.toml
fast-iot-example-projects/fiot-data-processing-pipeline/deployments/full/: .env  deployment.yaml
fast-iot-example-projects/fiot-data-processing-pipeline/deployments/production/: .env
fast-iot-example-projects/fiot-data-processing-pipeline/src/fiot_data_processing_pipeline_services/data_processing/: data_processing_service.py  run.py
fast-iot-example-projects/fiot-data-processing-pipeline/src/fiot_data_processing_pipeline_services/data_source/: data_source_service.py  run.py
fast-iot-example-projects/fiot-data-processing-pipeline/src/fiot_data_processing_pipeline_services/mongo_database/: mongo_database_service.py  run.py
fast-iot-example-projects/fiot-pytorch-training/: MANIFEST.in  README.md  configure.py  dataset.csv  pyproject.toml
fast-iot-example-projects/fiot-pytorch-training/deployments/full/: .env  deployment.yaml
fast-iot-example-projects/fiot-pytorch-training/deployments/production/: .env
fast-iot-example-projects/fiot-pytorch-training/src/fiot_pytorch_training_services/data_processing/: data_processing_service.py  run.py
fast-iot-example-projects/fiot-pytorch-training/src/fiot_pytorch_training_services/data_source/: data_source_service.py  run.py
fast-iot-example-projects/fiot-pytorch-training/src/fiot_pytorch_training_services/mongo_database/: mongo_database_service.py  run.py
fast-iot-example-projects/fiot-pytorch-training/src/fiot_pytorch_training_services/pytorch_training/: run.py  (+2 more)
(+98 files in other folders)
